# transient

./: .gitignore  .gitmodules  LICENSE  Makefile  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
.github/workflows/: main.yml  rust.yml  transient.yml
config/: transient-kernel-config
docs/: index.md  installation.md
docs/cli/: build.md  commit.md  cp.md  delete.md  image.md  list.md  ps.md  rm.md  run.md  run_create_start_stop.md  ssh.md
docs/configuration-file/: comprehensive-example.md  overview.md
docs/details/: config-file.md  docker.md  images.md  shared-folders.md
docs/images/: building.md  format.md  images.md
docs/templates/: README.md  comprehensive-example-template.md
kernel/: buildroot-config  device_table.txt  kernel-config
scripts/: embed_file_into_markdown_template.py
test/: Makefile
test/config-files/: comprehensive-config  invalid-config  multiple-verbose-flags-config  ssh-command-config
test/features/: build.feature  cli.feature  commit.feature  config_file.feature  copy-in-copy-out.feature  cp.feature  create.feature  images.feature  persist.feature  ps.feature  sanity.feature  ssh_command.feature  ssh_console.feature  sshfs.feature
test/resources/: dhcp.network
test/unit/: test_build.py  test_config.py  test_qemu.py  test_store.py  test_utils.py
transient/: args.py  build.py  checked_threading.py  cli.py  configuration.py  editor.py  image.py  linux.py  qemu.py  scan.py  ssh.py  sshfs.py  store.py  transient.py  utils.py
transient/static/: transient-kernel  transient.priv  transient.pub
(+23 files in other folders)
